listo la pagins

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Mi primera WEb SITE con GIT Y GITHUB, HTML</h1>
-    <img src="foto.jpg" alt="foto">
+    <h1>Mui primera  web site</h1>
+    <img src="foto.jpg" alt="">
 </body>
 </html>
